--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,7 @@ add_pfunit_ctest(f_to_c
   LINK_LIBRARIES f_to_c_CXX dopey_testing
 )
 
-set(link_with_fortran_compilers "Intel;NVHPC")
+set(link_with_fortran_compilers "GNU;Intel;NVHPC")
 
 if( "${CMAKE_Fortran_COMPILER_ID}" IN_LIST link_with_fortran_compilers)
   set_target_properties(f_to_c PROPERTIES
