--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,39 +27,6 @@ CMAKE_DEPENDENT_OPTION(dopey.testing
 
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_library(dopey_Fortran)
-add_library(dopey::dopey_Fortran ALIAS dopey_Fortran)
-
-target_include_directories(dopey_Fortran
-PRIVATE
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/src>
-PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
-  $<INSTALL_INTERFACE:include/dopey>
-)
-
-add_library(dopey_CXX)
-add_library(dopey::dopey_CXX ALIAS dopey_CXX)
-
-target_compile_features(dopey_CXX PUBLIC
-  cxx_std_14
-)
-
-target_include_directories(dopey_CXX PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/src>
-  $<INSTALL_INTERFACE:include>
-)
-
-target_compile_definitions(dopey_CXX PUBLIC
-  $<$<Fortran_COMPILER_ID:Intel>:DOPEY_INTEL_CRAY_BOOL_FIXUP>
-  $<$<Fortran_COMPILER_ID:CRAY>:DOPEY_INTEL_CRAY_BOOL_FIXUP>
-)
-
-find_package(ISO_Fortran_binding REQUIRED)
-target_link_libraries(dopey_CXX PUBLIC
-  ISO_Fortran_binding
-)
-
 add_subdirectory(src)
 
 if( dopey.testing )
@@ -79,10 +46,10 @@ install(TARGETS dopey_Fortran dopey_CXX EXPORT dopeyTargets
 
 install(
   FILES
-    src/dopey/dope_generated_sizes.h
     src/dopey/dope.hpp
-    src/dopey/dope_generated_type_identifier_traits.hpp
-    ${CMAKE_CURRENT_BINARY_DIR}/dope_mod.mod
+    ${CMAKE_CURRENT_BINARY_DIR}/src/dopey/dope_generated_sizes.h
+    ${CMAKE_CURRENT_BINARY_DIR}/src/dopey/dope_generated_type_identifier_traits.hpp
+    ${CMAKE_CURRENT_BINARY_DIR}/src/dope_mod.mod
   DESTINATION include/dopey
 )
 
